fix spacing for buttons in delete modals

--- a/shrunk/static/css/shrunk.css
+++ b/shrunk/static/css/shrunk.css
@@ -503,3 +503,7 @@ nobr.link-info > span {
 .btn-round {
     border-radius: 25px;
 }
+
+.modal-body > button:first-of-type {
+    margin-left: 10px;
+}
